--- a/latex/homework/hw3.tex
+++ b/latex/homework/hw3.tex
@@ -281,9 +281,11 @@ HW due Sunday 2/9 by pdf upload to Canvas; .tex source on the \href{https://gith
 
         \item Suppose that $a, b \in \Z$ are relatively prime. (Google it if you don't remember what this means.) Fact: $\lcm(a, b) = ab.$ Optional challenge: prove it.
 
-        \item Consider the direct product $C_a \times C_b$, with $a$ and $b$ relatively prime. What is $|(1,1)|$?
+        \item Consider the direct product $\Z_a \times \Z_b$, with $a$ and $b$ relatively prime. What is $|(1,1)|$?
 
-        \item Conclude that $C_a \times C_b \cong C_{ab}.$
+        (\textbf{\Alert{NOTE TYPO FIX:}} I had previously written $C_a \times C_b$, in which the element $(1,1)$ would represent the identity. I could also have said, suppose that $C_a = \<g\>$ and $C_b = \<h\>$ and then think about the element $(g, h)\in C_a \times C_b$, but I think it's cleaner this way.)
+
+        \item Conclude that $\Z_a \times \Z_b \cong \Z_{ab}.$
     \end{enumerate}
 \end{problem}
 
