no really this time hw4 is done

--- a/latex/homework/hw4.tex
+++ b/latex/homework/hw4.tex
@@ -116,7 +116,7 @@ HW due Sunday 2/16 by pdf upload to Canvas; .tex source on the \href{https://git
         \end{minipage}
     } \end{center}
 
-    Like the proof we saw in class that every subgroup of a cyclic group is cyclic, there are lots of things going on behind the scenes of this proof. See if you can break up this proof into data, claims, and (maybe implicit) warrants. (Click this small diagram for big.)
+    Like the proof we saw in class that every subgroup of a cyclic group is cyclic, there are lots of things going on behind the scenes of this proof. See if you can break up this proof into data, claims, and (maybe implicit) warrants.
     \begin{center}
         \includegraphics[width=0.5\textwidth]{../images/toulmin.png}
     \end{center}
