slightly better hw4

--- a/latex/homework/hw4.tex
+++ b/latex/homework/hw4.tex
@@ -116,11 +116,22 @@ HW due Sunday 2/16 by pdf upload to Canvas; .tex source on the \href{https://git
         \end{minipage}
     } \end{center}
 
-    Like the proof we saw in class that every subgroup of a cyclic group is cyclic, there are lots of things going on behind the scenes of this proof. See if you can break up this proof into data, claims, and (maybe implicit) warrants.
-    \begin{center}
-        \includegraphics[width=0.5\textwidth]{../images/toulmin.png}
-    \end{center}
-    Helpful note: a warrant is a general principle and a data is a specific thing. For example, the group $G$ that we're thinking about is a data, and the statement ``group elements have inverses'' is a warrant.
+    Like the proof we saw in class that every subgroup of a cyclic group is cyclic, there are lots of things going on behind the scenes of this proof. See if you can break up this proof into data, claims, and (maybe implicit) warrants. (Click image for more big.)
+
+    \vspace{5mm}
+
+    \begin{minipage}{0.5\textwidth}
+        \href{https://github.com/rhinopotamus/math312/blob/2f0aa44212c2d23d921378ffb9bc1fb20295a619/latex/images/toulmin.png}{\includegraphics[width=\textwidth]{../images/toulmin.png}}
+    \end{minipage}
+    \begin{minipage}{0.5\textwidth}
+        \begin{itemize}
+            \setlength\itemsep{0.2em}
+            \item A warrant is a general principle, like ``group elements have inverses''.
+            \item A data is a specific thing, like the ``generic particular'' $y$ and also its inverse $y\inv$.
+            \item When we believe a claim, it becomes a data.
+            \item Look for characteristic words that introduce data, claims, or warrants. 
+        \end{itemize}
+    \end{minipage}
 \end{problem}
 
 
@@ -297,7 +308,7 @@ The center of an abelian group is boring: it is the whole group. The center of a
 
 \subsection*{Preview of next week: Cosets}
 
-When we looked for copies of $C_2$ inside of $D_3$, we noted this guy, who ``has the same shape'' as $C_2\cong\<f\>\leq D_3$ but isn't a subgroup because it doesn't include the identity. This guy is called a ``coset'' -- you can think of it as a shifted version of a subgroup.
+When we looked for copies of $C_2$ inside of $D_3$, we noted this guy shaded in blue, who ``has the same shape'' as $C_2\cong\<f\>\leq D_3$ but isn't a subgroup because it doesn't include the identity. This guy is called a ``coset'' -- you can think of it as a shifted version of a subgroup.
 
 \begin{minipage}{0.4\textwidth}
     \[\begin{tikzpicture}
